# Qv2ray

./: .appveyor.yml  .clang-format  .directory  .gitignore  .gitmodules  .lgtm.yml  .travis.yml  BUILD.md  BUILDING.md  Build.Counter  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.orig  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Hv2ray.pro  Qv2ray.astylerc  Qv2ray.pro  QvRoute.schema.json  README.md  _clang-format  appveyor.yml  azure-pipelines.yml  confedit.cpp  confedit.h  confedit.ui  crowdin.yml  db.h  ignored_cpp_structs.hpp  importconf.cpp  importconf.h  importconf.ui  jePwbM.json  macOS.patch  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qv2ray-config-models.qmodel  qv2ray.qmodel  (+8 more)
.copr/: Makefile
.github/: FUNDING.yml
ChangeLogs/: CHANGELOG-v1.0.md
README_l10n/: en-US.md
assets/: AndroidManifest.xml.in  CMakeDMGBackground.tif  DS_Store  MacOSXBundleInfo.plist.in  ProtocolSchemes.txt  credit.html  info.plist  qv2ray-new.qmodel  (+5 more)
src/Qv2rayBase/: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/Qv2rayBase/.githooks/license-maintainer/: .gitattributes  LICENSE-hash  LICENSE-javadoc  LICENSE-private-header  LICENSE-qt-cpp  README.md  install  license.pm  pre-commit
src/Qv2rayBase/.github/workflows/: build-android.yml  build-desktop.yml  build-wasm.yml
src/Qv2rayBase/assets/: v2ray_api.proto
src/Qv2rayBase/cmake/: Deployment.cmake  FindLibUV.cmake  Qv2rayBase.cmake.in  Windows.cmake  libuvw.cmake
src/Qv2rayBase/cmake/versioninfo/: VersionInfo.in  VersionResource.rc
src/Qv2rayBase/include/Qv2rayBase/: Qv2rayBaseFeatures.hpp  Qv2rayBaseLibrary.hpp
src/Qv2rayBase/include/Qv2rayBase/Common/: HTTPRequestHelper.hpp  ProfileHelpers.hpp  Settings.hpp  Utils.hpp
src/Qv2rayBase/include/Qv2rayBase/Interfaces/: IStorageProvider.hpp  IUserInteractionInterface.hpp
src/Qv2rayBase/include/Qv2rayBase/Plugin/: LatencyTestHost.hpp  PluginAPIHost.hpp  PluginManagerCore.hpp
src/Qv2rayBase/include/Qv2rayBase/Profile/: KernelManager.hpp  ProfileManager.hpp
src/Qv2rayBase/include/Qv2rayBase/private/: Qv2rayBaseLibrary_p.hpp
src/Qv2rayBase/include/Qv2rayBase/private/Common/: SettingsUpgrade_p.hpp
src/Qv2rayBase/include/Qv2rayBase/private/Interfaces/: BaseStorageProvider_p.hpp
src/Qv2rayBase/include/Qv2rayBase/private/Plugin/: LatencyTestHost_p.hpp  LatencyTestThread_p.hpp  PluginAPIHost_p.hpp  PluginManagerCore_p.hpp
src/Qv2rayBase/include/Qv2rayBase/private/Profile/: KernelManager_p.hpp  ProfileManager_p.hpp
src/Qv2rayBase/src/: Qv2rayBaseLibrary.cpp
src/Qv2rayBase/src/Common/: HTTPRequestHelper.cpp  ProfileHelpers.cpp  SettingsUpgrade.cpp
src/Qv2rayBase/src/Plugin/: LatencyTestHost.cpp  PluginAPIHost.cpp  PluginManagerCore.cpp
src/Qv2rayBase/src/Profile/: KernelManager.cpp  ProfileManager.cpp
src/Qv2rayBase/src/private/: Qv2rayBaseLibrary_p.cpp
src/Qv2rayBase/src/private/Common/: SettingsUpgrade_p.cpp
src/Qv2rayBase/src/private/Interfaces/: BaseStorageProvider_p.cpp
src/Qv2rayBase/src/private/Plugin/: LatencyTestHost_p.cpp  LatencyTestThread_p.cpp  PluginAPIHost_p.cpp  PluginManagerCore_p.cpp
src/Qv2rayBase/src/private/Profile/: KernelManager_p.cpp  ProfileManager_p.cpp
src/Qv2rayBase/tests/: CMakeLists.txt  TestCommon.hpp
src/Qv2rayBase/tests/Plugin/: tst_PluginLoader.cpp
src/plugins/protocols/: BuiltinProtocolPlugin.cpp  BuiltinProtocolPlugin.hpp  CMakeLists.txt  QvPlugin-BuiltinProtocolSupport.cmake  resx.qrc
src/plugins/protocols/common/: CommonTypes.hpp
src/plugins/protocols/core/: OutboundHandler.cpp  OutboundHandler.hpp
src/plugins/protocols/ui/: Interface.hpp  PluginSettingsWidget.cpp  PluginSettingsWidget.hpp  PluginSettingsWidget.ui
src/plugins/protocols/ui/inbound/: dokodemo-door.cpp  dokodemo-door.hpp  dokodemo-door.ui  httpin.cpp  httpin.hpp  httpin.ui  shadowsocks.cpp  socksin.cpp  socksin.hpp  socksin.ui  vmess.hpp  vmess.ui
src/plugins/protocols/ui/outbound/: blackhole.cpp  blackhole.hpp  blackhole.ui  dns.cpp  dns.hpp  dns.ui  freedom.cpp  freedom.hpp  freedom.ui  httpout.cpp  httpout.hpp  httpout.ui  loopback.cpp  loopback.hpp  loopback.ui  mtproto.cpp  mtproto.hpp  mtproto.ui  shadowsocks.cpp  shadowsocks.hpp  shadowsocks.ui  socksout.cpp  socksout.hpp  socksout.ui  trojan.cpp  trojan.hpp  trojan.ui  vless.cpp  vless.hpp  vless.ui  vmess.cpp  vmess.hpp  vmess.ui
src/plugins/v2ray/: BuiltinV2RayCorePlugin.cpp  BuiltinV2RayCorePlugin.hpp  CMakeLists.txt  V2RayCorePluginTemplate.cpp  V2RayCorePluginTemplate.hpp
src/plugins/v2ray/assets/: V2Ray-Stats.proto  V2Ray5-Stats.proto  V2RayGo-Stats.proto  V2RayRust-Stats.proto  V2RaySN-Stats.proto
src/plugins/v2ray/common/: CommonHelpers.cpp  CommonHelpers.hpp  SettingsModels.hpp
src/plugins/v2ray/core/: V2RayAPIStats.cpp  V2RayAPIStats.hpp  V2RayGoKernel.cpp  V2RayGoKernel.hpp  V2RayGoProfileGenerator.cpp  V2RayKernel.cpp  V2RayKernel.hpp  V2RayProfileGenerator.cpp  api.pb.c  api.pb.h  pb.h  pb_common.c  pb_common.h  pb_decode.c  pb_encode.c  pb_encode.h
src/plugins/v2ray/core/V2Ray/: Kernel.cpp  Kernel.hpp  ProfileGenerator.cpp
src/plugins/v2ray/core/V2Ray5/: Kernel.cpp  Kernel.hpp  ProfileGenerator.cpp  ProfileGenerator.hpp
src/plugins/v2ray/core/V2RayGo/: Kernel.cpp  Kernel.hpp  ProfileGenerator.cpp  ProfileGenerator.hpp
src/plugins/v2ray/core/V2RayRust/: Kernel.cpp  Kernel.hpp  ProfileGenerator.cpp  ProfileGenerator.hpp  toml.hpp
src/plugins/v2ray/core/V2RaySN/: Kernel.cpp  Kernel.hpp  ProfileGenerator.cpp  ProfileGenerator.hpp
src/plugins/v2ray/core/v2ray/: V2Ray.cpp  V2RayProfileGenerator.cpp  V2RayProfileGenerator.hpp
src/plugins/v2ray/core/v2ray-go/: V2RayGo.cpp  V2RayGoProfileGenerator.cpp
src/plugins/v2ray/core/v2ray-v5/: V2Ray5.cpp  V2Ray5.hpp  V2Ray5ProfileGenerator.cpp
src/plugins/v2ray/ui/: w_V2RayKernelSettings.cpp  w_V2RayKernelSettings.hpp  w_V2RayKernelSettings.ui
test/: CMakeLists.txt  Common.hpp
test/libs/QJsonStruct/: QJsonIO.cpp
test/src/components/latency/: TestRealPing.cpp
test/src/core/connection/: TestGeneration.cpp  TestParseSS.cpp  TestParseTrojan.cpp  TestParseVLESS.cpp  TestParseVmess.cpp
(+985 files in other folders)
